--- a/apps/sls/package.json
+++ b/apps/sls/package.json
@@ -12,11 +12,12 @@
     "node": ">=16.15.1"
   },
   "dependencies": {
-    "@trpc/server": "9.25.3",
+    "@trpc/server": "9.22.0",
     "apollo-server-lambda": "3.9.0",
     "aws-sdk": "2.1160.0",
     "express": "4.18.1",
     "source-map-support": "0.5.21",
+    "trpc-playground": "0.1.6",
     "zod": "3.17.3"
   },
   "devDependencies": {
